0028306: Visualization - viewer crashes if style for shaded display is set to HATCH

Fixed NULL-dereference in OpenGl_Context::SetPolygonHatchStyle().